# numerix

./: .gitignore  Cargo.toml  README-zh.md  README.md
crates/numerix-core/: Cargo.toml  README.md
crates/numerix-core/src/: array.rs  lib.rs
crates/numerix-interpolation/: Cargo.toml
crates/numerix-linalg/: Cargo.toml
crates/numerix-quadrature/: Cargo.toml
crates/numerix-random/: Cargo.toml
crates/numerix-sparse/: Cargo.toml
numerix/: Cargo.toml
