[workspace]
resolver = "3"
members = [ ".", "crates/*" ]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [ "Xiangong Tang <tangxiangong@gmail.com>" ]

[workspace.dependencies]


[package]
name = "numerix"
version.workspace = true
edition.workspace = true
description = "Scientific Computing in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tangxiangong/numerix"
readme = "README.md"

[dependencies]


[lib]
name = "numerix"
doctest = false
  
[profile.release]
lto = true
codegen-units = 1
panic = "abort"